# BLA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
benchmarks/: meson.build  run_all.rb
benchmarks/add/: add_allscale.cc  add_bla.cc  add_blaze.cc  add_eigen.cc  add_ublas.cc
benchmarks/copy/: copy_bla.cc  copy_eigen.cc
benchmarks/lud/: lud_allscale.cc  lud_bla.cc  lud_eigen.cc
benchmarks/mm/: mm_allscale_rowsplit.cc  mm_bla.cc  mm_blastrassen.cc  mm_blaze.cc  mm_eigen.cc  mm_eigen_blas.cc  mm_ublas.cc
benchmarks/mm_flops/: mmflops_allscale.cc  mmflops_allscale_rowsplit.cc
benchmarks/mmcutoff/: mm_bla.cc  mm_bla_rowsplit.cc
benchmarks/mmflops/: mmflops_bla.cc  mmflops_bla_rowsplit.cc  mmflops_eigen.cc
benchmarks/mmnt/: mm_n_t_allscale.cc  mmnt_bla.cc  mmnt_eigen.cc
benchmarks/mmtn/: mm_t_n_allscale.cc  mmtn_bla.cc  mmtn_eigen.cc
benchmarks/mmtt/: mm_t_t_eigen.cc  mmtt_bla.cc  mmtt_eigen.cc
benchmarks/qrd/: qrd_bla.cc  qrd_eigen.cc
benchmarks/rowswap/: rowswap_bla.cc
benchmarks/simplifyscalarmultiplication/: simplify_scalarmultiplication_allscale.cc  simplifyscalarmultiplication_bla.cc  simplifyscalarmultiplication_eigen.cc
benchmarks/simplifysubmatrixmultiplication/: simplifysubmatrixmultiplication_bla.cc  simplifysubmatrixmultiplication_blaze.cc  simplifysubmatrixmultiplication_eigen.cc  simplifysubmatrixmultiplication_ublas.cc
benchmarks/simplifytranspose/: simplifytranspose_bla.cc  simplifytranspose_blaze.cc  simplifytranspose_eigen.cc  simplifytranspose_ublas.cc
benchmarks/submm/: submm_bla.cc  submm_eigen.cc
benchmarks/subtraction/: subtraction_bla.cc  subtraction_eigen.cc
benchmarks/transpose/: transpose_bla.cc  transpose_blaze.cc  transpose_eigen.cc  transpose_ublas.cc
benchmarks/x/: x_allscale.cc  x_bla.cc  x_eigen.cc
cmake/: FindGMP.cmake  FindGMPXX.cmake  FindOpenBLAS.cmake  add_module.cmake  defaults.cmake  msvc_settings.cmake
cmake/dependencies/: eigen3.cmake  googletest.cmake  openblas.cmake  vc.cmake
examples/: complex.cc  expressions.cc  functions.cc  gmp.cc  meson.build  pagerank.cc
include/: meson.build
include/allscale/api/user/data/: matrix.h
include/allscale/api/user/data/impl/: decomposition.h  eigen.h  evaluate.h  expressions.h  forward.h  householder.h  iterator.h  matrix_multiplication.h  operators.h  simplify.h  traits.h  transpose.h  transpositions.h  types.h
include/allscale/api/user/data/impl/expressions/: abs.h  access.h  addition.h  conjugate.h  evaluated.h  ewise_multiplication.h  expression.h  identity.h  matrix.h  negation.h  (+7 more)
include/bla/: matrix.h
include/bla/impl/: decomposition.h  eigen.h  evaluate.h  expressions.h  forward.h  householder.h  iterator.h  iterator_wrapper.h  matrix_multiplication.h  operators.h  simplify.h  traits.h  transpose.h  transpositions.h  types.h
include/bla/impl/expressions/: abs.h  access.h  addition.h  conjugate.h  evaluated.h  ewise_multiplication.h  expression.h  identity.h  matrix.h  multiplication.h  negation.h  permutation.h  scalar.h  sub.h  subtraction.h  transpose.h  view.h
iwyu/: matrix.imp
pkgconfig/: allscale-api.pc
results/: addition.json  etosubmm.json  etotranspose.json  mm.json  mmcutoffblock.json  mmcutoffrow.json  transpose.json
scripts/: .gitignore  benchmark.py  benchmarks.py  plot.py  slurm.sh
src/benchmark/: bench_result.h  boxplot_graph.R  mm_allscale.cc  results.rb  run.rb  run_all.rb  run_benchmark_suite.sh  timer.h
src/benchmark/add/: add_allscale.cc  add_eigen.cc
src/benchmark/copy/: copy_allscale.cc  copy_eigen.cc
src/benchmark/include/: bench_result.h  timer.h  utility.h
src/benchmark/lud/: lud_allscale.cc  lud_eigen.cc
src/benchmark/mm/: mm_allscale.cc  mm_allscale_blas.cc  mm_allscale_eigen.cc  mm_allscale_pbblas.cc  mm_allscale_pblas.cc  mm_allscale_pvblas.cc  mm_allscale_rowsplit.cc  mm_allscale_strassen.cc  mm_allscale_transpose.cc  mm_allscalestrassen.cc  mm_eigen.cc
src/benchmark/mm_flops/: mmflops_allscale.cc  mmflops_allscale_rowsplit.cc  mmflops_eigen.cc
src/benchmark/mm_n_t/: mm_n_t_allscale.cc  mm_n_t_eigen.cc
src/benchmark/mm_t_n/: mm_t_n_allscale.cc  mm_t_n_eigen.cc
src/benchmark/mm_t_t/: mm_t_t_allscale.cc  mm_t_t_eigen.cc
src/benchmark/mmnt/: mm_n_t_allscale.cc  mm_n_t_eigen.cc
src/benchmark/mmtn/: mm_t_n_allscale.cc  mm_t_n_eigen.cc
src/benchmark/mmtt/: mm_t_t_allscale.cc  mm_t_t_eigen.cc
src/benchmark/qrd/: qrd_allscale.cc  qrd_eigen.cc
src/benchmark/rowswap/: rowswap_allscale.cc  rowswap_eigen.cc
src/benchmark/simplify/: simplify_allscale.cc  simplify_eigen.cc  simplify_scalarmultiplication_eigen.cc  simplify_transpose_allscale.cc
src/benchmark/simplify_scalarmultiplication/: simplify_scalarmultiplication_allscale.cc  simplify_scalarmultiplication_eigen.cc
src/benchmark/simplify_submatrixmultiplication/: simplify_submatrixmultiplication_allscale.cc  simplify_submatrixmultiplication_eigen.cc
src/benchmark/simplify_transpose/: simplify_transpose_allscale.cc
src/benchmark/simplifyscalarmultiplication/: simplify_scalarmultiplication_allscale.cc  simplify_scalarmultiplication_eigen.cc
src/benchmark/simplifysubmatrixmultiplication/: simplify_submatrixmultiplication_allscale.cc  simplify_submatrixmultiplication_eigen.cc
src/benchmark/simplifytranspose/: simplify_transpose_allscale.cc  simplify_transpose_eigen.cc
src/benchmark/submm/: submm_allscale.cc  submm_eigen.cc
src/benchmark/subtraction/: subtraction_allscale.cc
src/benchmark/transpose/: transpose_allscale.cc  transpose_eigen.cc
src/benchmark/x/: x_allscale.cc  x_eigen.cc
src/examples/: complex.cc  expressions.cc  functions.cc  gmp.cc  matrix_multiplication.cc  pagerank.cc
src/test/user/data/: decomposition.cc  eigen.cc  evaluate.cc  expressions.cc  matrix.cc  matrix_multiplication.cc  operators.cc  simplify.cc  solve.cc  traits.cc  transpose.cc  utils.h
tests/: decomposition.cc  eigen.cc  evaluate.cc  expressions.cc  matrix_multiplication.cc  meson.build  operators.cc  simplify.cc  solve.cc  traits.cc  transpose.cc  utils.h
