d_gtest = dependency('gtest', required: false)

e_decomposition = executable('test_decomposition', 'decomposition.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_eigen = executable('test_eigen', 'eigen.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_evaluate = executable('test_evaluate', 'evaluate.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_expressions = executable('test_expressions', 'expressions.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_matrix_multiplication = executable('test_matrix_multiplication', 'matrix_multiplication.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_operators = executable('test_operators', 'operators.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_simplify = executable('test_simplify', 'simplify.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_solve = executable('test_solve', 'solve.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_traits = executable('test_traits', 'traits.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])
e_transpose = executable('test_transpose', 'transpose.cc', include_directories: i_bla, dependencies: [d_thread, d_allscale, d_blas, d_vc, d_eigen, d_gtest])

test('Decomposition', e_decomposition)
test('Eigen', e_eigen)
test('Evaluate', e_evaluate)
test('Expressions', e_expressions)
test('Matrix Multiplication', e_matrix_multiplication)
test('Operators', e_operators)
test('Simplify', e_simplify)
test('Solve', e_solve)
test('Traits', e_traits)
test('Transpose', e_transpose)