gtest_dep = dependency('gtest', required: true, main: true)

test_dep = [thread_dep, allscale_dep, blas_dep, vc_dep, gtest_dep]

e_decomposition = executable('test_decomposition', 'decomposition.cc', include_directories: bla_inc, dependencies: test_dep)
e_eigen = executable('test_eigen', 'eigen.cc', include_directories: bla_inc, dependencies: test_dep)
e_evaluate = executable('test_evaluate', 'evaluate.cc', include_directories: bla_inc, dependencies: test_dep)
e_expressions = executable('test_expressions', 'expressions.cc', include_directories: bla_inc, dependencies: test_dep)
e_matrix_multiplication = executable('test_matrix_multiplication', 'matrix_multiplication.cc', include_directories: bla_inc, dependencies: test_dep)
e_operators = executable('test_operators', 'operators.cc', include_directories: bla_inc, dependencies: test_dep)
e_simplify = executable('test_simplify', 'simplify.cc', include_directories: bla_inc, dependencies: test_dep)
e_solve = executable('test_solve', 'solve.cc', include_directories: bla_inc, dependencies: test_dep)
e_traits = executable('test_traits', 'traits.cc', include_directories: bla_inc, dependencies: test_dep)
e_transpose = executable('test_transpose', 'transpose.cc', include_directories: bla_inc, dependencies: test_dep)

test('Decomposition', e_decomposition)
test('Eigen', e_eigen)
test('Evaluate', e_evaluate)
test('Expressions', e_expressions)
test('Matrix Multiplication', e_matrix_multiplication)
test('Operators', e_operators)
test('Simplify', e_simplify)
test('Solve', e_solve)
test('Traits', e_traits)
test('Transpose', e_transpose)